# pyspt-v2

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
docs/css/: style.css
docs/js/: main.js  wave-animation.js
src/pyspt/: __init__.py  _version.py
src/pyspt/correlation/: __init__.py
src/pyspt/filtering/: __init__.py
src/pyspt/io/: __init__.py
src/pyspt/measurements/: __init__.py
src/pyspt/plotting/: __init__.py
src/pyspt/preprocessing/: __init__.py
src/pyspt/spectral/: __init__.py
src/pyspt/transforms/: __init__.py
src/pyspt/waveforms/: __init__.py  _modulated.py  _periodic.py  _pulses.py
tests/: test_waveforms.py
tutorials/ch02_generation/: 01_waveforms.ipynb
